{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Mouse",
            "id": "6e0cc48b-cb9b-41c0-aff8-d41741cd3aba",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "2d712f21-908c-4f11-87f7-03c136a2815b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "9187e269-4fdc-416c-a1d8-c3ddb67c6287",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "def717ad-5de6-4a16-88b3-319983a0b0af",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a00655cf-4a92-4317-a71e-1996692694b1",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}